# customer/api/customer/customer_grpc.pb.go
@@ -1,8 +1,8 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
 // - protoc-gen-go-grpc v1.3.0
-// - protoc             v4.24.3
-// source: api/customer/customer.proto
+// - protoc             v4.23.4
+// source: customer/customer.proto
 
 ///kratos:clients
 
@@ -21,9 +21,10 @@ import (
 const _ = grpc.SupportPackageIsVersion7
 
 const (
-	Customer_GetCustomer_FullMethodName = "/api.customer.Customer/GetCustomer"
-	Customer_Login_FullMethodName       = "/api.customer.Customer/Login"
-	Customer_Logout_FullMethodName      = "/api.customer.Customer/Logout"
+	Customer_GetCustomer_FullMethodName   = "/api.customer.Customer/GetCustomer"
+	Customer_Login_FullMethodName         = "/api.customer.Customer/Login"
+	Customer_Logout_FullMethodName        = "/api.customer.Customer/Logout"
+	Customer_EstimatePrice_FullMethodName = "/api.customer.Customer/EstimatePrice"
 )
 
 // CustomerClient is the client API for Customer service.
@@ -38,6 +39,7 @@ type CustomerClient interface {
 	Login(ctx context.Context, in *LoginReq, opts ...grpc.CallOption) (*LoginRes, error)
 	// 登出
 	Logout(ctx context.Context, in *LogoutReq, opts ...grpc.CallOption) (*LogoutRes, error)
+	EstimatePrice(ctx context.Context, in *GetEstimatePriceRequest, opts ...grpc.CallOption) (*GetEstimatePriceReply, error)
 }
 
 type customerClient struct {
@@ -75,6 +77,15 @@ func (c *customerClient) Logout(ctx context.Context, in *LogoutReq, opts ...grpc
 	return out, nil
 }
 
+func (c *customerClient) EstimatePrice(ctx context.Context, in *GetEstimatePriceRequest, opts ...grpc.CallOption) (*GetEstimatePriceReply, error) {
+	out := new(GetEstimatePriceReply)
+	err := c.cc.Invoke(ctx, Customer_EstimatePrice_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // CustomerServer is the server API for Customer service.
 // All implementations must embed UnimplementedCustomerServer
 // for forward compatibility
@@ -87,6 +98,7 @@ type CustomerServer interface {
 	Login(context.Context, *LoginReq) (*LoginRes, error)
 	// 登出
 	Logout(context.Context, *LogoutReq) (*LogoutRes, error)
+	EstimatePrice(context.Context, *GetEstimatePriceRequest) (*GetEstimatePriceReply, error)
 	mustEmbedUnimplementedCustomerServer()
 }
 
@@ -102,6 +114,9 @@ func (UnimplementedCustomerServer) Login(context.Context, *LoginReq) (*LoginRes,
 }
 func (UnimplementedCustomerServer) Logout(context.Context, *LogoutReq) (*LogoutRes, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Logout not implemented")
+}
+func (UnimplementedCustomerServer) EstimatePrice(context.Context, *GetEstimatePriceRequest) (*GetEstimatePriceReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method EstimatePrice not implemented")
 }
 func (UnimplementedCustomerServer) mustEmbedUnimplementedCustomerServer() {}
 
@@ -170,6 +185,24 @@ func _Customer_Logout_Handler(srv interface{}, ctx context.Context, dec func(int
 	return interceptor(ctx, in, info, handler)
 }
 
+func _Customer_EstimatePrice_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetEstimatePriceRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(CustomerServer).EstimatePrice(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Customer_EstimatePrice_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(CustomerServer).EstimatePrice(ctx, req.(*GetEstimatePriceRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // Customer_ServiceDesc is the grpc.ServiceDesc for Customer service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -189,7 +222,11 @@ var Customer_ServiceDesc = grpc.ServiceDesc{
 			MethodName: "Logout",
 			Handler:    _Customer_Logout_Handler,
 		},
+		{
+			MethodName: "EstimatePrice",
+			Handler:    _Customer_EstimatePrice_Handler,
+		},
 	},
 	Streams:  []grpc.StreamDesc{},
-	Metadata: "api/customer/customer.proto",
+	Metadata: "customer/customer.proto",
 }
