# customer/api/customer/customer_http.pb.go
@@ -1,8 +1,8 @@
 // Code generated by protoc-gen-go-http. DO NOT EDIT.
 // versions:
 // - protoc-gen-go-http v2.7.0
-// - protoc             v4.24.3
-// source: api/customer/customer.proto
+// - protoc             v4.23.4
+// source: customer/customer.proto
 
 package customer
 
@@ -19,11 +19,13 @@ var _ = binding.EncodeURL
 
 const _ = http.SupportPackageIsVersion1
 
+const OperationCustomerEstimatePrice = "/api.customer.Customer/EstimatePrice"
 const OperationCustomerGetCustomer = "/api.customer.Customer/GetCustomer"
 const OperationCustomerLogin = "/api.customer.Customer/Login"
 const OperationCustomerLogout = "/api.customer.Customer/Logout"
 
 type CustomerHTTPServer interface {
+	EstimatePrice(context.Context, *GetEstimatePriceRequest) (*GetEstimatePriceReply, error)
 	// GetCustomer	rpc CreateCustomer (CreateCustomerRequest) returns (CreateCustomerReply);
 	//	rpc UpdateCustomer (UpdateCustomerRequest) returns (UpdateCustomerReply);
 	//	rpc DeleteCustomer (DeleteCustomerRequest) returns (DeleteCustomerReply);
@@ -39,6 +41,7 @@ func RegisterCustomerHTTPServer(s *http.Server, srv CustomerHTTPServer) {
 	r.GET("/customer/get-verify-code/{Telephone}", _Customer_GetCustomer0_HTTP_Handler(srv))
 	r.POST("/customer/login", _Customer_Login0_HTTP_Handler(srv))
 	r.POST("/customer/logout", _Customer_Logout0_HTTP_Handler(srv))
+	r.GET("/customer/estimate-price/{origin}/{destination}", _Customer_EstimatePrice0_HTTP_Handler(srv))
 }
 
 func _Customer_GetCustomer0_HTTP_Handler(srv CustomerHTTPServer) func(ctx http.Context) error {
@@ -107,7 +110,30 @@ func _Customer_Logout0_HTTP_Handler(srv CustomerHTTPServer) func(ctx http.Contex
 	}
 }
 
+func _Customer_EstimatePrice0_HTTP_Handler(srv CustomerHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetEstimatePriceRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationCustomerEstimatePrice)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.EstimatePrice(ctx, req.(*GetEstimatePriceRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*GetEstimatePriceReply)
+		return ctx.Result(200, reply)
+	}
+}
+
 type CustomerHTTPClient interface {
+	EstimatePrice(ctx context.Context, req *GetEstimatePriceRequest, opts ...http.CallOption) (rsp *GetEstimatePriceReply, err error)
 	GetCustomer(ctx context.Context, req *GetCustomerRequest, opts ...http.CallOption) (rsp *GetCustomerReply, err error)
 	Login(ctx context.Context, req *LoginReq, opts ...http.CallOption) (rsp *LoginRes, err error)
 	Logout(ctx context.Context, req *LogoutReq, opts ...http.CallOption) (rsp *LogoutRes, err error)
@@ -119,6 +145,19 @@ type CustomerHTTPClientImpl struct {
 
 func NewCustomerHTTPClient(client *http.Client) CustomerHTTPClient {
 	return &CustomerHTTPClientImpl{client}
+}
+
+func (c *CustomerHTTPClientImpl) EstimatePrice(ctx context.Context, in *GetEstimatePriceRequest, opts ...http.CallOption) (*GetEstimatePriceReply, error) {
+	var out GetEstimatePriceReply
+	pattern := "/customer/estimate-price/{origin}/{destination}"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationCustomerEstimatePrice))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
 }
 
 func (c *CustomerHTTPClientImpl) GetCustomer(ctx context.Context, in *GetCustomerRequest, opts ...http.CallOption) (*GetCustomerReply, error) {
