# customer/openapi.yaml
@@ -3,9 +3,32 @@
 
 openapi: 3.0.3
 info:
-    title: Customer API
+    title: ""
     version: 0.0.1
 paths:
+    /customer/estimate-price/{origin}/{destination}:
+        get:
+            tags:
+                - Customer
+            operationId: Customer_EstimatePrice
+            parameters:
+                - name: origin
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+                - name: destination
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.customer.GetEstimatePriceReply'
     /customer/get-verify-code/{Telephone}:
         get:
             tags:
@@ -27,13 +50,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/GetCustomerReply'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
+                                $ref: '#/components/schemas/api.customer.GetCustomerReply'
     /customer/login:
         post:
             tags:
@@ -44,7 +61,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/LoginReq'
+                            $ref: '#/components/schemas/api.customer.LoginReq'
                 required: true
             responses:
                 "200":
@@ -52,13 +69,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/LoginRes'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
+                                $ref: '#/components/schemas/api.customer.LoginRes'
     /customer/logout:
         post:
             tags:
@@ -69,7 +80,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/LogoutReq'
+                            $ref: '#/components/schemas/api.customer.LogoutReq'
                 required: true
             responses:
                 "200":
@@ -77,16 +88,29 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/LogoutRes'
-                default:
-                    description: Default error response
+                                $ref: '#/components/schemas/api.customer.LogoutRes'
+    /helloworld/{name}:
+        get:
+            tags:
+                - Greeter
+            description: Sends a greeting
+            operationId: Greeter_SayHello
+            parameters:
+                - name: name
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/Status'
+                                $ref: '#/components/schemas/helloworld.v1.HelloReply'
 components:
     schemas:
-        GetCustomerReply:
+        api.customer.GetCustomerReply:
             type: object
             properties:
                 Code:
@@ -100,22 +124,23 @@ components:
                     type: string
                 verifyCodeLife:
                     type: string
-        GoogleProtobufAny:
+        api.customer.GetEstimatePriceReply:
             type: object
             properties:
-                '@type':
+                origin:
                     type: string
-                    description: The type of the serialized message.
-            additionalProperties: true
-            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        LoginReq:
+                destination:
+                    type: string
+                price:
+                    type: string
+        api.customer.LoginReq:
             type: object
             properties:
                 telephone:
                     type: string
                 verifyCode:
                     type: string
-        LoginRes:
+        api.customer.LoginRes:
             type: object
             properties:
                 code:
@@ -129,10 +154,10 @@ components:
                     type: string
                 tokenLifeTime:
                     type: string
-        LogoutReq:
+        api.customer.LogoutReq:
             type: object
             properties: {}
-        LogoutRes:
+        api.customer.LogoutRes:
             type: object
             properties:
                 Code:
@@ -140,21 +165,13 @@ components:
                     format: int32
                 Message:
                     type: string
-        Status:
+        helloworld.v1.HelloReply:
             type: object
             properties:
-                code:
-                    type: integer
-                    description: The status code, which should be an enum value of [google.rpc.Code][google.rpc.Code].
-                    format: int32
                 message:
                     type: string
-                    description: A developer-facing error message, which should be in English. Any user-facing error message should be localized and sent in the [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
-                details:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/GoogleProtobufAny'
-                    description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
-            description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+            description: The response message containing the greetings
 tags:
     - name: Customer
+    - name: Greeter
+      description: The greeting service definition.
